fix styling on Safari

--- a/src/components/Separator/separator.css
+++ b/src/components/Separator/separator.css
@@ -2,6 +2,7 @@
   width: 100%;
   position: absolute;
   z-index: 2;
+  left: 0px;
 }
 
 .separator {
