--- a/src/components/WelcomePage/welcomepage.css
+++ b/src/components/WelcomePage/welcomepage.css
@@ -24,7 +24,7 @@
         }
 
             .firstLetter {
-              transform: rotate(-90deg);
+              transform: rotate(-90deg) translateX(13px);
               letter-spacing: 35px;
             }
 
